Added 2px padding in btn devices 10:55 PM 05-05-2022

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ header p {
 
 .btn {
     width: 30%;
-    padding: 10px 0;
+    padding: 10px 2px;
     border-radius: 7px;
     border: 1px solid #D5D4D8;
     background-color: white;
